fix: shift alignment of button to make it fit better

--- a/app/assets/stylesheets/components/btn.css.scss
+++ b/app/assets/stylesheets/components/btn.css.scss
@@ -109,6 +109,12 @@
       padding-left: 8px;
     }
   }
+
+  // shift the button to make it match the alignment of buttons with btn-outline style
+  &.outline-btn-alignment {
+    padding-left: 8px;
+    padding-right: 18px;
+  }
 }
 
 .btn.btn-outline {
